2004-05-29  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_queue.c: Assert fix from
        Erik Hofman <erik@ehofman.com>

2004-05-23  Adam D. Moss  <adam@gimp.org>

	* openal/linux/src/arch/arts/arts.c: ARTS fix from
        Andreas Beckermann <b_mann@gmx.de>

2004-05-21  Adam D. Moss  <adam@gimp.org>

	* openal/linux/src/arch/irix/iris.c: Various IRIX backend
	fixes from Erik Hofman.

2004-05-18  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/irix/iris.c: New IRIX backend from
        Erik Hofman <erik@ehofman.com>, supports 4-channel audio and
        more flexible config.

2004-05-18  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_buffer.c: buf->queue_list.size is not the
        same thing as buf->queue_list.items; don't use one when we mean
        the other, or strangeness may occur.

2004-05-18  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_queue.c: Plug a memory leak... or at least
        work around it.

2004-02-02  Ryan C. Gordon  <ryan@epicgames.com>

	* openal/linux/configure.in
	* openal/linux/src/arch/alsa/alsa.c
	Optionally use dlopen() on libasound instead of linking directly to it
	in the ALSA driver. Enable this at configure time with:
	   ./configure --enable-alsa --enable-alsa-dlopen

2004-01-29  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* openal/include/AL/altypes.h
	* openal/include/AL/alctypes.h
	Type consolidation, minor number bump

	* openal/linux/src/al_buffer.h
	* openal/linux/src/al_buffer.c
	AL_CURRENT/AL_QUEUED to AL_PROCESSED/AL_PENDING

2004-01-07  Adam D. Moss  <adam@gimp.org>

	* audioconvert/ac_freq.c: Fix another potential overenthusiasm
	when frequency-upscaling a single 16-bit sample.	

2003-12-26  Adam D. Moss  <adam@gimp.org>

	* src/extensions/al_ext_loki.c: Use the correct sample size
	in alBufferWriteData_LOKI() after the monoification.  Fixes the
	problem of the buffer playing for much longer than it should.
